# ansible-intentory-templater

./: .gitignore  README.md  pyproject.toml  setup.yml  tasks.py  todo.txt
roles/newrelic/tasks/: configure_client_management_account.yml  download_new_relic_java_agent.yml  get_license_key.yml  install_newrelic_java_agent.yml  main.yml
src/: __init__.py  ec2_client.py  inventory_group.py  ssm_client.py  templater.py
templates/: inventory.yml.jinja  lower_inventory.yml.jinja  prod_inventory.yml.jinja
templates/newrelic/: newrelic.yml.j2
